--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,70 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
+    font-family: 'Asap', sans-serif;
 }
 
 header {
-    display: grid;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.645), rgb(199, 199, 199));
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 200px;
-    justify-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+header a img {
+    padding-top: 18px;
+    padding-left: 70px;
+    padding-bottom: 8px;
+}
+
+header nav {
+    display: flex;
     align-items: center;
+    height: 60px;
 }
 
-body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: normal;
-    font-size: 1em;
+header nav ul {
+    position: relative;
+    display: flex;
+    padding-top: 15px;
+    padding-right: 300px;
+    list-style: none;
 }
 
-nav {
-    grid-column-start: 3;
-    width: max-content;
-    padding-right: 50px;
+header nav ul li {
+    display: flex;
+    width: 60px;
+    flex-direction: column;
 }
 
-a {
-    color: black;
+header nav ul li a {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    word-wrap: none;
+    width: 100%;
+    text-align: center;
     text-decoration: none;
-    padding-right: 50px;
+    color: black;
+}
+
+header nav ul li a .icon {
+    position: relative;
+    display: block;
+    top: 25px;
+}
+
+header nav ul li a .text {
+    opacity: 0;
+    transition: 0.5s;
+}
+
+header nav ul li:hover a .text {
+    transform: translateY(20px);
+    opacity: 1;
 }
