--- a/styles/header.css
+++ b/styles/header.css
@@ -2,65 +2,156 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
-* {
-  margin: 0px;
-  padding: 0px;
+/* 
+Padrão:
+  1 - Posicionamento,
+  2 - Box Model,
+  3 - Tipografia,
+  4 - Visual.
+*/
+
+:root {
+  --color01: #155939;
+  --color02: #1B8C57;
+  --color03: #5EA689;
+  --color04: #84BFA4;
+  --color05: #B8D9CA;
+}
+
+/********/
+/* Body */
+/********/
+body {
+  margin: 0;
+  padding: 0;
+  border: 0;
   box-sizing: border-box;
-  font-family: 'Asap', sans-serif;
+  height: 97vh;
 }
 
-html {
-  font-size: 62.5%;
-}
-
+/**********/
 /* Header */
+/**********/
 header {
+  font-family: "Asap", sans-serif;
+  font-size: 16px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  font-size: 1.6rem;
-  height: 100px;
-  background-image: linear-gradient(to bottom, gray, white, gray);
+  width: 100%;
+  height: 70px;
+  margin: 0px auto;
+  overflow: hidden;
+  background-image: linear-gradient(to bottom, #70c5a2, #C8D1C8, #34906a 120%);
 }
 
-header .content {
+.header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100%;
+  max-width: 750px;
   width: 90%;
 }
 
-header .content nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.header-content .image {
+  width: 200px;
 }
 
-header .content nav ul {
+.header-content .image img {
+  width: 100%;
+  height: 100%;
+}
+
+.header-content .toggle-button{
+  display: none;
+}
+
+.menu-section nav ul {
   display: flex;
-  justify-content: center;
-  align-items: center;
   list-style: none;
 }
 
-header .content nav ul li {
-  display: block;
-  padding: 0px 15px;
+.menu-section nav ul li {
+  border-radius: 5px;
 }
 
-header .content nav ul li a {
-  color: black;
+.menu-section nav ul li a {
+  padding: 2px 5px;
+  border-radius: 4px;
+  color: var(--color02);
   text-decoration: none;
-  font-weight: 500;
-  font-variant: small-caps;
-  font-size: 1.6rem;
+  transition: 0.5s;
 }
 
-header .content nav ul li a span.text {
-  margin-bottom: 20px;
+.menu-section nav ul li:hover a {
+  background-color: var(--color04);
+  color: var(--color05);
 }
 
-header .content .toggle-button {
-  display: none;
+@media (max-width: 768px) and (min-width: 300px) {
+  /**********/
+  /* Header */
+  /**********/
+  .header-content > div.toggle-button {
+    position: relative;
+    display: flex;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.315);
+    width: 40px;
+    height: 40px;
+    background-color: var(--color05);
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 11;
+  }
+
+  .header-content > .toggle-button > span {
+    position: absolute;
+    top: 45%;
+    right: 13%;
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: var(--color03);
+    transition: 0.3s;
+  }
+
+  .menu-section {
+    display: none;
+  }
+
+  .menu-section.activate {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color02);
+    width: 100vw;
+    height: 100vh;
+    z-index: 10;
+  }
+
+  .menu-section nav {
+    width: 100%;
+  }
+
+  .menu-section nav ul {
+    text-align: center;
+    padding: 0px;
+  }
+
+  .menu-section nav ul li {
+    display: block;
+  }
+
+  .menu-section nav ul li a {
+    display: block;
+    color: var(--color03);
+    text-decoration: none;
+    transition: 0.3s;
+    padding: 5px;
+  }
+
+  .menu-section nav ul li:hover a {
+    background-color: var(--color04);
+  }
 }
