--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@
   font-weight: 800;
   color: var(--color05);
   padding: 5px;
+}
+
+.cabecalho-menu-lista-item {
   border-radius: 10px;
   transition: 0.3s;
 }
@@ -88,7 +91,7 @@
   border-bottom: 1px solid black;
   max-width: 600px;
   margin: 0px auto;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 40px;
   font-size: 2rem;
   font-family: "Roboto", sans-serif;
@@ -98,7 +101,7 @@
 
 .conteudo-principal-cursos {
   display: grid;
-  margin: 0px auto;
+  margin: 20px auto;
   max-width: 1400px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr 1fr;
@@ -123,11 +126,12 @@
 
 .card:hover {
   box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.2);  
-  transform: translateY(-10px);
+  transform: translateY(-5px);
 }
 
 .card-imagem {
   width: 100%;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .card-texto {
@@ -148,13 +152,44 @@
 }
 
 .card-btn {
-  padding: 5px;
+  font-size: 1.1rem;
   color: white;
-  background-color: rgb(47, 0, 255);
+  min-width: 200px;
+  background-color: var(--color03);
   border-radius: 6px;
+  border: 1px solid var(--color03);
+  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  padding: 5px;
   align-self: center;
-  width: 100px;
-  margin: 5px;
+  transition: 0.3s;
+}
+
+.card-btn:active {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+  transform: translateY(4px);
+}
+
+.curso-detalhado {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  box-shadow: inset -2px 1px 30px 0px black;
+  width: 100%;
+  height: 1000px;
+  margin-bottom: 0px;
+}
+
+#retroescavadeira {
+  background-image: url("images/retroescavadeira-card.jpg");
+}
+
+.hide {
+  display: none;
+}
+
+.unhide {
+  display: block;
 }
 
 .rodape {
