--- a/styles/style.css
+++ b/styles/style.css
@@ -2,27 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-@font-face {
-  font-family: "Nazegul";
-  src: url("../fonts/nazegul/Nazegul-Regular.ttf");
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-}
-
-html {
-  scroll-behavior: smooth;
-  font-size: 62.5%;
-}
-
-body {
-  overflow-x: hidden;
-}
-
 :root {
   --normal-font: "Catamaran", sans-serif;
   --constrast-color: #44dab9;
@@ -61,6 +40,7 @@ body {
 
 .cabecalho-menu-lista-item {
   border-radius: 1rem;
+  border-bottom-right-radius: 0px;
   transition: 0.3s;
 
 }
@@ -81,7 +61,7 @@ body {
   align-items: center;
   width: 100%;
   height: 75vh;
-  background-image: url("images/hero/hero-template.jpg");
+  background-image: url("../images/hero/hero-template.webp");
   background-position: bottom left;
   background-attachment: fixed;
   background-size: cover;
@@ -123,13 +103,8 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr 1fr;
   row-gap: 2rem;
-
   justify-content: center;
   justify-items: center;
-}
-
-.card-container {
-  max-width: 95%;
 }
 
 .center-grid {
@@ -137,7 +112,8 @@ body {
 }
 
 .card {
-  width: 100%;
+  width: 420px;
+  height: 450px;
   border-radius: 1rem;
   box-shadow: 0.6rem 0.4rem 0.8rem rgba(0, 0, 0, 0.2);
   transition: 0.3s;
@@ -151,7 +127,8 @@ body {
 }
 
 .card-imagem {
-  width: 100%;
+  width: 420px;
+  height: 400px;
   border-radius: 1rem 1rem 0px 0px;
 }
 
@@ -199,13 +176,12 @@ body {
   background-position: center center;
   box-shadow: inset -0.2rem 0.1rem 3rem 0rem black;
   width: 100%;
-  height: 90rem;
+  height: 60rem;
   margin-bottom: 0rem;
   color: white;
   background-attachment: fixed;
   transition: 0.3s;
 }
-
 
 .texto-detalhado {
   position: relative;
@@ -230,36 +206,36 @@ body {
 }
 
 #retroescavadeira {
-  background-image: url("images/detalhada/escavadeira.jpg");
+  background-image: url("../images/detalhada/escavadeira.webp");
   background-position: center left;
 }
 
 #solda {
-  background-image: url("images/detalhada/solda.jpg");
+  background-image: url("../images/detalhada/solda.webp");
   background-position: center center;
   background-size: cover;
 }
 
 #empilhadeira {
-  background-image: url("images/detalhada/empilhadeira.jpg");
+  background-image: url("../images/detalhada/empilhadeira.webp");
   background-position: top center;
 }
 
 #formacao {
-  background-image: url("images/detalhada/mecanico-florestal.jpg");
+  background-image: url("../images/detalhada/mecanico-florestal.webp");
   background-size: cover;
 }
 
 #teoria {
-  background-image: url("images/detalhada/teoria-pratica.jpg")
+  background-image: url("../images/detalhada/teoria-pratica.webp")
 }
 
 #maquinas-florestais {
-  background-image: url("images/detalhada/maquina-florestal.jpg");
+  background-image: url("../images/detalhada/maquina-florestal.webp");
 }
 
 #empresa {
-  background-image: url("images/detalhada/floresta.jpg");
+  background-image: url("../images/detalhada/floresta.webp");
 }
 
 .hide {
