--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,8 @@
 }
 
 .cabecalho-logo {
-  height: 100%;
+  width: 25rem;
+  height: 8rem;
 }
 
 .cabecalho-menu-lista {
@@ -59,8 +60,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
-  height: 75vh;
+  width: 100vw;
+  height: 52rem;
   background-image: url("../images/hero/hero-template.webp");
   background-position: bottom left;
   background-attachment: fixed;
@@ -82,6 +83,18 @@
 .principal-hero-texto-paragrafo {
   font-family: var(--normal-font);
   font-size: 3.6rem;
+}
+
+.button-novidades {
+  font-size: 2.3rem;
+  text-decoration: underline;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.3s ease-in-out;
+}
+
+.button-novidades:hover {
+  background-color: rgb(132, 191, 164, 0.5);
 }
 
 .conteudo-principal-titulo {
@@ -249,14 +262,16 @@
 .rodape {
   font-size: 1.8rem;
   font-family: var(--normal-font);
-  background-color: var(--constrast-color);
+  background-color: black;
   text-align: center;
 }
 
 .rodape-texto {
+  font-weight: 600;
   padding: 1.5rem;
+  color: white;
 }
 
-.rodape-link {
-  color: black;
+.rodape-link-github {
+  color: white;
 }
