--- a/styles/style.css
+++ b/styles/style.css
@@ -1,62 +1,71 @@
+@charset "UTF-8";
+
+/*
+Padrão da estilização:
+  font (family, color, size...);
+  position;
+  display (flex, grid, block...);
+  display-configuration (justify-content, align-items...);
+  margin, padding, border;
+  size (width, height);
+  especific styles (list-style...);
+  background;
+  animation;
+*/
+
+/* ================================== */
+/*           Importations             */
+/* ================================== */
 @import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-:root {
-  --normal-font: "Catamaran", sans-serif;
-  --constrast-color: #44dab9;
-  --color05: #155939;
-  --color04: #1B8C57;
-  --color03: #5EA689;
-  --color02: #84BFA4;
-  --color01: #B8D9CA;
-}
-
-.cabecalho {
+/* ================================== */
+/*               Header               */
+/* ================================== */
+.header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: var(--constrast-color);
   height: 8rem;
+  background-color: var(--constrast-color);
 }
 
-.cabecalho-logo {
+.header__logo {
   width: 25rem;
   height: 8rem;
 }
 
-.cabecalho-menu-lista {
+.header__nav__list {
   display: flex;
-  list-style: none;
   gap: 1rem;
+  list-style: none;
 }
 
-.cabecalho-menu-lista-item-link {
-  font-size: 1.6rem;
-  font-family: var(--normal-font);
-  font-weight: 800;
-  color: var(--color05);
-  padding: 0.5rem;
-}
-
-.cabecalho-menu-lista-item {
+.header__nav__list__item {
   border-radius: 1rem;
   border-bottom-right-radius: 0px;
   transition: 0.3s;
-
 }
 
-.cabecalho-menu-lista-item:hover {
+.header__nav__list__item:hover {
   background-color: var(--color01);
   transform: translateY(-4px);
 }
 
-.toggle-button {
-  display: none;
-  overflow: hidden;
+.header__nav__list__item__link {
+  font-family: var(--normal-font);
+  font-size: 1.6rem;
+  font-weight: 800;
+  padding: 0.5rem;
+  color: var(--color05);
 }
 
-.principal-hero {
+
+/* ================================== */
+/*          Principal Hero            */
+/* ================================== */
+.hero {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -69,18 +78,18 @@
   box-shadow: inset 0rem 0.1rem 2rem 0rem black;
 }
 
-.principal-hero-texto {
+.hero__text {
   text-align: center;
   color: white;
 }
 
-.principal-hero-texto-titulo {
+.hero__text__title {
   font-family: "Roboto";
-  font-weight: 900;
   font-size: 7rem;
+  font-weight: 900;
 }
 
-.principal-hero-texto-paragrafo {
+.hero__text__paragraph {
   font-family: var(--normal-font);
   font-size: 3.6rem;
 }
@@ -88,8 +97,8 @@
 .button-novidades {
   font-size: 2.3rem;
   text-decoration: underline;
-  cursor: pointer;
   border-radius: 10px;
+  cursor: pointer;
   transition: 0.3s ease-in-out;
 }
 
@@ -97,41 +106,45 @@
   background-color: rgb(132, 191, 164, 0.5);
 }
 
-.conteudo-principal-titulo {
-  border-bottom: 1px solid black;
+/* ================================== */
+/*              Courses               */
+/* ================================== */
+.courses__title {
+  font-family: "Roboto", sans-serif;
+  font-size: 3rem;
+  font-weight: bolder;
+  text-align: center;
   max-width: 60rem;
   margin: 0px auto;
   margin-top: 2rem;
   margin-bottom: 4rem;
-  font-size: 3rem;
-  font-family: "Roboto", sans-serif;
-  font-weight: bolder;
-  text-align: center;
+  border-bottom: 1px solid black;
 }
 
-.conteudo-principal-cursos {
+.courses__cards {
   display: grid;
-  margin: 2rem auto;
-  max-width: 140rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr 1fr;
-  row-gap: 2rem;
   justify-content: center;
   justify-items: center;
+  row-gap: 2rem;
+  max-width: 140rem;
+  margin: 2rem auto;
 }
 
-.center-grid {
-  grid-column-start: 2;
-}
-
+/* ================================== */
+/*                Card                */
+/* ================================== */
 .card {
+  font-family: var(--normal-font);
+  text-indent: 1rem;
+  display: flex;
+  flex-direction: column;
   width: 420px;
   height: 450px;
   border-radius: 1rem;
   box-shadow: 0.6rem 0.4rem 0.8rem rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  display: flex;
-  flex-direction: column;
 }
 
 .card:hover {
@@ -139,82 +152,84 @@
   transform: translateY(-0.5rem);
 }
 
-.card-imagem {
+.card__image {
   width: 420px;
   height: 400px;
   border-radius: 1rem 1rem 0px 0px;
 }
 
-.card-texto {
-  font-family: var(--normal-font);
-  text-indent: 1rem;
-}
-
-.card-titulo {
-  background-color: green;
+.card__title {
   font-size: 2rem;
+  background-color: green;
   color: white;
 }
 
-.card-descricao {
+.card__description {
   font-weight: 500;
   font-size: 1.8rem;
-  margin-top: 5px;
   height: 10rem;
+  margin-top: 5px;
 }
 
-.card-btn {
+.card__btn {
   font-size: 1.6rem;
   color: white;
+  align-self: center;
   min-width: 20rem;
-  background-color: var(--color03);
-  border-radius: 0.6rem;
-  border: 1px solid var(--color03);
-  box-shadow: 0rem 0.5rem 0.3rem rgba(0, 0, 0, 0.2);
   margin: 1rem;
   padding: 0.5rem;
-  align-self: center;
+  border: 1px solid var(--color03);
+  border-radius: 0.6rem;
+  background-color: var(--color03);
+  box-shadow: 0rem 0.5rem 0.3rem rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
 
-.card-btn:active {
+.card__btn:active {
   box-shadow: 0px 0.1rem 0.1rem rgba(0, 0, 0, 0.2);
   transform: translateY(0.4rem);
 }
 
-.curso-detalhado {
+.center-grid {
+  grid-column-start: 2;
+}
+
+/* ================================== */
+/*          Courses Detailed          */
+/* ================================== */
+.courses__detailed {
   font-family: var(--normal-font);
+  color: white;
+  margin-bottom: 0rem;
+  width: 100%;
+  height: 60rem;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  box-shadow: inset -0.2rem 0.1rem 3rem 0rem black;
-  width: 100%;
-  height: 60rem;
-  margin-bottom: 0rem;
-  color: white;
   background-attachment: fixed;
+  box-shadow: inset -0.2rem 0.1rem 3rem 0rem black;
   transition: 0.3s;
 }
 
-.texto-detalhado {
+.text__detailed {
   position: relative;
   top: 3rem;
   left: 3rem;
+  width: 60rem;
   padding: 1rem;
   border-radius: 1rem;
-  width: 60rem;
   background-color: rgba(128, 128, 128, 0.453);
   background-attachment: fixed;
 }
 
-.titulo-detalhado {
+.title__detailed {
   font-family: "Roboto", sans-serif;
-  font-weight: 900;
   font-size: 6rem;
+  font-weight: 900;
   font-variant: small-caps;
 }
 
-.descricao-detalhado {
+.description__detailed {
   font-size: 1.8rem;
 }
 
@@ -259,19 +274,22 @@
   display: block;
 }
 
-.rodape {
-  font-size: 1.8rem;
+/* ================================== */
+/*               Footer               */
+/* ================================== */
+.footer {
   font-family: var(--normal-font);
-  background-color: black;
+  font-size: 1.8rem;
   text-align: center;
+  background-color: black;
 }
 
-.rodape-texto {
+.footer__text {
   font-weight: 600;
-  padding: 1.5rem;
   color: white;
+  padding: 1.5rem;
 }
 
-.rodape-link-github {
+.footer__link {
   color: white;
 }
