--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /*
-Padrão da estilização:
+Padrão da estilização (que eu vo tentar seguir):
   font (family, color, size...);
   position;
   display (flex, grid, block...);
@@ -208,7 +208,8 @@ Padrão da estilização:
   background-position: center center;
   background-attachment: fixed;
   box-shadow: inset -0.2rem 0.1rem 3rem 0rem black;
-  transition: 0.3s;
+  overflow: hidden;
+  transition: 0.5s;
 }
 
 .text__detailed {
