--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,9 @@ Padrão da estilização (que eu vo tentar seguir):
 /* ================================== */
 .header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+  width: 99;
   height: 8rem;
   background-color: var(--constrast-color);
 }
@@ -60,7 +61,6 @@ Padrão da estilização (que eu vo tentar seguir):
   padding: 0.5rem;
   color: var(--color05);
 }
-
 
 /* ================================== */
 /*          Principal Hero            */
