arrumando as coisas para a conversa com o Paulinho

--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@
 
 :root {
   --normal-font: "Catamaran", sans-serif;
-  --constrast-color: #44dab9;
+  --contrast-color: #44dab9;
   --color05: #155939;
   --color04: #1B8C57;
   --color03: #5EA689;
