--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ Padrão da estilização (que eu vo tentar seguir):
   align-items: center;
   width: 99;
   height: 8rem;
-  background-color: var(--constrast-color);
+  background-color: var(--contrast-color);
 }
 
 .header__logo {
@@ -282,7 +282,7 @@ Padrão da estilização (que eu vo tentar seguir):
   font-family: var(--normal-font);
   font-size: 1.8rem;
   text-align: center;
-  background-color: var(--constrast-color);
+  background-color: var(--contrast-color);
 }
 
 .footer__text {
