--- a/styles/ead.css
+++ b/styles/ead.css
@@ -16,25 +16,73 @@ body::-webkit-scrollbar {
 main {
 	display: grid;
 	grid-template-columns: 2fr 3fr;
+	grid-template-rows: 1fr;
 	height: 80vh;
 	color: white;
 	background-image: url(../images/EAD/hero/background.jpg);
-	background-position: center center;
+	background-position: center bottom;
 	background-size: cover;
 	background-repeat: no-repeat;
+}
+
+.column2 {
+	grid-column-start: 2;
+}
+
+.flex {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 main img {
 	justify-self: center;
 	align-self: center;
+	width: 85%;
 }
 
-main div h1 {
+.text-container {
+	border-radius: 15px;
+	width: 750px;
+	height: fit-content;
+	padding: 15px;
+	background-color: #1b8c5770;
+}
+
+.text-container h1 {
+	display: inline-block;
+	font-family: "Roboto", sans-serif;
 	font-size: 4rem;
 }
 
-main div p {
-	font-size: 3rem;
-	line-height: 1em;
+.text-container p {
+	font-family: "Catamaran", sans-serif;
+	font-size: 2.5rem;
+	line-height: 1.5em;
 	text-indent: 1em;
+}
+
+.subscribe-button {
+	display: flex;
+	grid-column-start: 2;
+	justify-self: center;
+	justify-content: center;
+	align-items: center;
+	width: 750px;
+	height: 75px;
+	margin-top: 40px;
+	border-radius: 15px;
+	cursor: pointer;
+	background-color: var(--color04);
+	box-shadow: 0px 4px 0px 0px var(--color05),
+				4px 0px 0px 0px var(--color05),
+				4px 4px 0px 0px var(--color05);
+}
+
+.subscribe-button a {
+	font-family: "Catamaran", sans-serif;
+	font-size: 2em;
+	padding: 30px 40px;
+	color: white;
 }
