--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ Padrão da estilização (que eu vo tentar seguir):
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 99;
+  width: 100%;
   height: 8rem;
   background-color: var(--contrast-color);
 }
