--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -1,32 +1,129 @@
-/* ================================== */
-/*              Contaimer             */
-/* ================================== */
-.content-container {
+/* NAVBAR */
+#navbar .navbar-container {
+	display: flex;
+	justify-content: space-around;
+	margin: 0rem 3rem;
+}
+
+#navbar .navbar__logo {
+	width: 27rem;
+}
+
+#navbar .navbar__list {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	align-self: center;
+}
+
+#navbar .navbar__link {
+	position: relative;
+	font-size: 1.8rem;
+	font-weight: 800;
+	color: var(--color05);
+	text-transform: uppercase;	
+	transition: 0.3s ease-in-out;
+}
+
+#navbar .navbar__li::after {
+	position: absolute;
+	content: '';
+	top: 1;
+	left: 0;
 	width: 100%;
-	height: 400px;
-}
-
-.content-container:nth-child(odd) {
+	height: 1px;
 	background-color: var(--color05);
-	box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
-	color: white;
 }
 
-/* ================================== */
-/*       Informações Relevantes       */
-/* ================================== */
-.relevant-infos {
-	font-size: 3rem;
-	display: grid;
-	grid-template-rows: repeat(3, 1fr);
-	height: 500px;
+#navbar .navbar__toggle {
+	position: relative;
+	display: inline-block;
+	align-self: center;
+	width: 30px;
+	height: 30px;
 }
 
-.relevant-infos__text-container {
-	justify-self: center;
+#navbar .navbar__toggle span {
+	position: absolute;
+	top: calc(50%);
+	left: calc(50% - 10px);
+	width: 20px;
+	height: 2px;
+	background-color: var(--color05);
+}
+
+#navbar .navbar__toggle span:nth-child(1) {
+	top: calc(50% - 7px);
+}
+
+#navbar .navbar__toggle span:nth-child(3) {
+	top: calc(50% + 7px)
+}
+
+#navbar .collapse-links {
 	text-align: center;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	width: 100vw;
+	border-top: 1px solid var(--color05);
+	transform: translateY(-200%);
+	opacity: 0;
+	transition: 0.5s ease-in-out;
 }
 
-.bottom-detail {
-	align-self: baseline;
+#navbar .collapse-links.activate {
+	transform: translateY(0%);
+	opacity: 1;
+}
+
+@media (min-width: 769px) {
+	#navbar .navbar__list {
+		flex-direction: row;
+	}
+
+	#navbar .navbar__link {
+		margin-left: 2.5rem;
+	}
+
+	#navbar .navbar__toggle {
+		display: none;
+	}
+
+	#navbar .collapse-links {
+		position: relative;
+		width: auto;
+		border: none;		
+		background-color: var(--contrast-color);
+		transform: translateY(0);
+		opacity: 1;
+	}
+
+	#navbar .navbar__li::after {
+		position: relative;
+	}
+
+	#navbar .navbar__link {
+		padding: 1px 8px;
+		border-radius: 15px 15px 0px 15px;
+	}
+
+	#navbar .navbar__link:hover {
+		background-color: var(--color01);
+		transform: translateY(20px);
+	}
+}
+
+/* Arrumar os links no mobile e tentar fazer o efeito de jump nos links no desktop */
+
+@keyframes jump {
+	0% {
+		transform: translateY(0%);
+	}
+	50% {
+		transform: translateY(20%);
+	}
+	100% {
+		transform: translateY(0%);
+	}
 }
