--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -14,6 +14,7 @@
 	flex-direction: column;
 	list-style: none;
 	align-self: center;
+	width: 100%;
 }
 
 #navbar .navbar__link {
@@ -25,14 +26,11 @@
 	transition: 0.3s ease-in-out;
 }
 
-#navbar .navbar__li::after {
-	position: absolute;
-	content: '';
-	top: 1;
-	left: 0;
+#navbar .navbar__li {
+	position: relative;
 	width: 100%;
-	height: 1px;
-	background-color: var(--color05);
+	padding: 2rem ;
+	border-bottom: 1px solid var(--color05);
 }
 
 #navbar .navbar__toggle {
@@ -78,12 +76,12 @@
 }
 
 @media (min-width: 769px) {
-	#navbar .navbar__list {
-		flex-direction: row;
+	#navbar {
+		position: relative;
 	}
 
-	#navbar .navbar__link {
-		margin-left: 2.5rem;
+	#navbar .navbar__list {
+		flex-direction: row;
 	}
 
 	#navbar .navbar__toggle {
@@ -95,8 +93,9 @@
 		width: auto;
 		border: none;		
 		background-color: var(--contrast-color);
-		transform: translateY(0);
+		transform: translateY(0%);
 		opacity: 1;
+		background-color: transparent;
 	}
 
 	#navbar .navbar__li::after {
@@ -106,6 +105,7 @@
 	#navbar .navbar__link {
 		padding: 1px 8px;
 		border-radius: 15px 15px 0px 15px;
+		margin-left: 2.5rem;
 	}
 
 	#navbar .navbar__link:hover {
