--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -1,124 +1,1 @@
-/* NAVBAR */
-#navbar .navbar-container {
-	display: flex;
-	justify-content: space-around;
-	margin: 0rem 3rem;
-}
-
-#navbar .navbar__logo {
-	width: 20rem;
-}
-
-#navbar .navbar__list {
-	display: flex;
-	flex-direction: column;
-	list-style: none;
-	align-self: center;
-	width: 100%;
-}
-
-#navbar .navbar__link {
-	position: relative;
-	font-size: 1.8rem;
-	font-weight: 800;
-	color: var(--color05);
-	text-transform: uppercase;	
-	transition: 0.3s ease-in-out;
-}
-
-#navbar .navbar__li {
-	position: relative;
-	width: 100%;
-	padding: 2rem ;
-	border-bottom: 1px solid var(--color05);
-}
-
-#navbar .navbar__toggle {
-	position: relative;
-	display: inline-block;
-	align-self: center;
-	width: 30px;
-	height: 30px;
-}
-
-#navbar .navbar__toggle span {
-	position: absolute;
-	top: calc(50%);
-	left: calc(50% - 10px);
-	width: 20px;
-	height: 2px;
-	background-color: var(--color05);
-}
-
-#navbar .navbar__toggle span:nth-child(1) {
-	top: calc(50% - 7px);
-}
-
-#navbar .navbar__toggle span:nth-child(3) {
-	top: calc(50% + 7px)
-}
-
-#navbar .collapse-links {
-	text-align: center;
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	width: 100vw;
-	transform: translateY(-200%);
-	opacity: 0;
-	transition: 0.5s ease-in-out;
-}
-
-#navbar .collapse-links.activate {
-	transform: translateY(calc(0% + 7.2rem));
-	opacity: 1;
-}
-
-@media (min-width: 1025px) {
-	#navbar .navbar-container {
-		margin: 0rem 7.5rem;
-	}
-	
-	#navbar .navbar__logo {
-		width: 27rem;
-	}
-	
-	#navbar .collapse-links {
-		position: relative;
-		justify-content: center;
-		text-align: center;
-		width: auto;
-		transform: translateY(0%);
-		transition: 0.5s ease-in-out;
-		background-color: transparent;
-		opacity: 1;
-	}
-	
-	#navbar .collapse-links.activate {
-		transform: translateY(0%);
-		opacity: 1;
-	}
-	
-	#navbar .navbar__list {
-		flex-direction: row;
-		align-self: center;
-		justify-content: flex-end;
-	}
-	
-	#navbar .navbar__link {
-		font-size: 1.8rem;
-		font-weight: 800;
-		color: var(--color05);
-	}
-	
-	#navbar .navbar__li {
-		width: auto;
-		padding: 0;
-		margin-left: 3rem;
-		border-bottom: none;
-	}
-	
-	#navbar .navbar__toggle {
-		display: none;
-	}
-}
+@charset "UTF-8";
