--- a/styles/global.css
+++ b/styles/global.css
@@ -61,3 +61,27 @@ body {
     font-size: 62.5%;
   }
 }
+
+.active-link {
+  position: relative;
+}
+
+.active-link::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #155939;
+  transition: 0.3s ease-in-out;
+}
+
+.active-link:hover::after {
+  opacity: 0;
+}
+
+.container {
+  margin: auto;
+  width: 10fr;
+}
