--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,4 +1,9 @@
 /* NAVBAR */
+#navbar {
+	position: fixed;
+	width: 100%;
+}
+
 #navbar .navbar-container {
 	display: flex;
 	justify-content: space-around;
@@ -25,6 +30,7 @@
 	text-transform: uppercase;	
 	transition: 0.3s ease-in-out;
 }
+
 
 #navbar .navbar__li {
 	position: relative;
@@ -90,6 +96,10 @@
 }
 
 @media (min-width: 1025px) {
+	#navbar {
+		z-index: 2;
+	}
+
 	#navbar .navbar-container {
 		margin: 0rem 7.5rem;
 	}
@@ -108,11 +118,7 @@
 		transition: 0.5s ease-in-out;
 		background-color: transparent;
 		opacity: 1;
-	}
-	
-	#navbar .collapse-links.activate {
-		transform: translateY(0%);
-		opacity: 1;
+		z-index: 1;
 	}
 	
 	#navbar .navbar__list {
@@ -127,13 +133,15 @@
 		font-weight: 800;
 		border-radius: 15px 15px 0px 15px;
 		color: var(--color05);
+		z-index: 30;
 	}
 
 	#navbar .navbar__link:hover {
+		margin-bottom: 3rem;
 		background-color: var(--color01);
+		color: var(--color05);
+		transform: translateY(30px)
 	}
-
-
 	
 	#navbar .navbar__li {
 		width: auto;
