--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,6 +1,6 @@
 /* NAVBAR */
 #navbar {
-	position: fixed;
+	position: relative;
 	width: 100%;
 }
 
@@ -96,10 +96,6 @@
 }
 
 @media (min-width: 1025px) {
-	#navbar {
-		z-index: 2;
-	}
-
 	#navbar .navbar-container {
 		margin: 0rem 7.5rem;
 	}
@@ -108,7 +104,7 @@
 		width: 27rem;
 	}
 	
-	#navbar .collapse-links {
+	#navbar .collapse-links, #navbar .collapse-links.activate {
 		position: relative;
 		justify-content: center;
 		text-align: center;
@@ -120,7 +116,7 @@
 		opacity: 1;
 		z-index: 1;
 	}
-	
+
 	#navbar .navbar__list {
 		flex-direction: row;
 		align-self: center;
