--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -1,1 +1,20 @@
 @charset "UTF-8";
+
+html {
+	overflow: hidden;
+}
+
+/* Main Content */
+
+/* Containers */
+#main-content .container-fluid {
+	width: 100%;
+	height: 100vh;
+}
+#main-content .container-fluid:nth-child(1) {
+	height: 75vh;
+}
+
+#main-content .container-fluid:nth-child(even) {
+	background-color: gray;
+}
