--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -88,6 +88,7 @@
 	transform: translateY(-200%);
 	opacity: 0;
 	transition: 0.5s ease-in-out;
+	z-index: 999;
 }
 
 #navbar .collapse-links.activate {
