--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -1,18 +1,68 @@
 @charset "UTF-8";
 
 html {
-	overflow: hidden;
 }
 
 /* Main Content */
 
+/* Indicators */
+.indicators-wrapper {
+	display: flex;
+	flex-direction: column;
+	row-gap: 1rem;
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
+}
+
+.indicator {
+	display: flex;
+	align-items: center;
+	position: relative;
+	width: 30px;
+	height: 30px;
+	background-color: var(--color01);
+	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25),
+				inset 2px 2px 4px rgba(255, 255, 255, 0.8),
+				inset -2px -2px 4px rgba(0, 0, 0, 0.5);
+	border-radius: 20px;
+}
+
+.indicator.active {
+	background-color: var(--color05);
+}
+
+.indicator a {
+	font-size: 1.3rem;
+	font-weight: 700;
+	position: absolute;
+	width: max-content;
+	transform: translateX(-110%);
+	color: white;
+	opacity: 0;
+	cursor: pointer;
+}
+
 /* Containers */
+.container {
+	width: 100%;
+	margin: 15px;
+}
+
+#main-content .container {
+	position: relative;
+}
+
 #main-content .container-fluid {
+	display: flex;
+	justify-content: center;
 	width: 100%;
 	height: 100vh;
 }
+
 #main-content .container-fluid:nth-child(1) {
-	height: 75vh;
+	height: calc(100vh - 72px);
 }
 
 #main-content .container-fluid:nth-child(even) {
