Feature do Quem somos added
Efeito de scroll simples por container
Pensar futuramente como fazer o efetio de pagina virando

--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -1,9 +1,14 @@
 @charset "UTF-8";
 
-html {
+/* HTML */
+html { 
+	overflow: hidden;
 }
 
-/* Main Content */
+/* NAVBAR */
+#navbar {
+	z-index: 998;
+}
 
 /* Indicators */
 .indicators-wrapper {
