--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -2,11 +2,12 @@
 
 /* HTML */
 html { 
-
+	scroll-snap-type: y mandatory;
 }
 
 /* NAVBAR */
 #navbar {
+	scroll-snap-align: center;
 	z-index: 998;
 }
 
@@ -39,6 +40,7 @@ html {
 }
 
 .indicator a {
+	display: none;
 	font-size: 1.3rem;
 	font-weight: 700;
 	position: absolute;
@@ -64,10 +66,12 @@ html {
 	justify-content: center;
 	width: 100%;
 	height: 100vh;
+	scroll-snap-align: center;
 }
 
 #main-content .container-fluid:nth-child(1) {
 	height: calc(100vh - 72px);
+	scroll-snap-align: none;
 }
 
 #main-content .container-fluid:nth-child(even) {
