--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -30,8 +30,8 @@ html {
 	height: 30px;
 	background-color: var(--color01);
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25),
-				inset 2px 2px 4px rgba(255, 255, 255, 0.8),
-				inset -2px -2px 4px rgba(0, 0, 0, 0.5);
+							inset 2px 2px 4px rgba(255, 255, 255, 0.8),
+							inset -2px -2px 4px rgba(0, 0, 0, 0.5);
 	border-radius: 20px;
 }
 
@@ -51,16 +51,7 @@ html {
 	cursor: pointer;
 }
 
-/* Containers */
-.container {
-	width: 100%;
-	margin: 15px;
-}
-
-#main-content .container {
-	position: relative;
-}
-
+/* Containers Fluids */
 #main-content .container-fluid {
 	display: flex;
 	justify-content: center;
@@ -76,4 +67,43 @@ html {
 
 #main-content .container-fluid:nth-child(even) {
 	background-color: gray;
+}
+
+/* Containers */
+.container {
+	width: 100%;
+	margin: 0px 15px;
+}
+
+#main-content .container {
+	position: relative;
+	display: grid;
+	grid-template-rows: 0.1fr 1fr 0.1fr;
+	grid-template-columns: 1fr;
+}
+
+/* Preview Content */
+.preview-content {
+	font-weight: 800;
+	font-size: 1.6rem;
+	display: flex;
+	justify-self: right;
+	color: white;
+}
+
+.preview-content span {
+	align-self: center;
+}
+
+.preview-content ion-icon {
+	align-self: center;
+	padding-left: 3px;
+}
+
+.previous {
+	grid-row-start: 0;
+}
+
+.next { 
+	grid-row-start: 3;
 }
