--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -33,6 +33,7 @@ html {
 							inset 2px 2px 4px rgba(255, 255, 255, 0.8),
 							inset -2px -2px 4px rgba(0, 0, 0, 0.5);
 	border-radius: 20px;
+	cursor: pointer;
 }
 
 .indicator.active {
@@ -48,7 +49,6 @@ html {
 	transform: translateX(-110%);
 	color: white;
 	opacity: 0;
-	cursor: pointer;
 }
 
 /* Containers Fluids */
@@ -82,6 +82,12 @@ html {
 	grid-template-columns: 1fr;
 }
 
+#main-content .container-fluid:nth-child(1) {
+	background-image: url("/background-first-container.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 /* Preview Content */
 .preview-content {
 	font-weight: 800;
@@ -89,6 +95,12 @@ html {
 	display: flex;
 	justify-self: right;
 	color: white;
+	cursor: pointer;
+}
+
+.preview-content::selection {
+	cursor: pointer;
+	background-color: transparent;
 }
 
 .preview-content span {
