--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -131,11 +131,13 @@ html {
 
 .topic {
 	font-size: 2.8rem;
+	margin-top: 20px;
 }
 
 .subtopic {
 	text-indent: 1.6rem;
 	font-size: 2.3rem;
+	margin-top: 5px;
 }
 
 .text {
