--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -83,7 +83,7 @@ html {
 }
 
 #info-container {
-	background-image: url("/images/Quem Somos/Mobile/informacoes_container.jpg");
+	background-image: url("/images/Quem Somos/Mobile/teste.jpg");
 	background-size: cover;
 }
 
