--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -87,6 +87,11 @@ html {
 	background-size: cover;
 }
 
+#who-we-are-container {
+	background-image: url("/images/Quem Somos/Mobile/teste.jpg");
+	background-size: cover;
+}
+
 /* Preview Content */
 .preview-content {
 	font-weight: 800;
