--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -58,11 +58,14 @@ html {
 	width: 100%;
 	height: 100vh;
 	scroll-snap-align: center;
+	box-shadow: inset 5px 5px 32px 16px black;
 }
 
-#main-content .container-fluid:nth-child(1) {
+#main-content #info-container {
 	height: calc(100vh - 72px);
 	scroll-snap-align: none;
+	background-image: url("/images/quem-somos/Mobile/teste.jpg");
+	background-size: cover;
 }
 
 #main-content .container-fluid:nth-child(even) {
@@ -80,6 +83,9 @@ html {
 	display: grid;
 	grid-template-rows: 0.1fr 1fr 0.1fr;
 	grid-template-columns: 1fr;
+}
+
+#info-container {
 }
 
 /* Preview Content */
