--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -65,7 +65,7 @@ html {
 	height: calc(100vh - 72px);
 	scroll-snap-align: none;
 	background-image: url("/images/quem-somos/Mobile/teste.jpg");
-	background-size: cover;
+	background-size: 100%;
 }
 
 #main-content .container-fluid:nth-child(even) {
