--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -64,8 +64,8 @@ html {
 #main-content #info-container {
 	height: calc(100vh - 72px);
 	scroll-snap-align: none;
-	background-image: url("/images/quem-somos/Mobile/teste.jpg");
-	background-size: 100%;
+	background-image: url("../images/quem-somos/Mobile/teste.jpg");
+	background-size: cover;
 }
 
 #main-content .container-fluid:nth-child(even) {
