--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -86,7 +86,7 @@ html {
 /* Preview Content */
 .preview-content {
 	font-weight: 800;
-	font-size: 1.6rem;
+	font-size: 2rem;
 	display: flex;
 	justify-self: right;
 	color: white;
@@ -115,14 +115,14 @@ html {
 	position: absolute;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	height: 100%;
+	justify-content: space-around;
 	overflow: hidden;
 }
 
 .title {
 	font-size: 4rem;
 	text-align: center;
+	justify-self: flex-start;
 }
 
 .topic {
