--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -127,6 +127,7 @@ html {
 
 .title {
 	font-size: 3.5rem;
+	font-weight: bolder;
 	text-align: center;
 	justify-self: flex-start;
 }
@@ -138,8 +139,8 @@ html {
 
 .subtopic {
 	text-indent: 1.6rem;
-	font-size: 2.8rem;
-	margin-top: 5px;
+	font-size: 2.2rem;
+	margin-top: 2.5px;
 }
 
 .text {
